Use virtual thread